# ruber-tiny-api

./: Dockerfile  pyproject.toml
api/: app.py  config.yaml  constants.py  model_0.picle  model_0.torch  models.py  utils.py
notebooks/: production.ipynb  test_rubert-tiny.ipynb
